[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keyring_interpolation"
version = "0.1.0"
authors = [
  { name="liammahoney", email="liammahoney96@gmail.com" },
]
description = "A configparser.Interpolation subclass that configures a ConfigParser instance to read values from a system's keyring via the keyring pypi library."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LiamMahoney/keyring_interpolation/"
"Bug Tracker" = "https://github.com/LiamMahoney/keyring_interpolation/issues/"